# pdfCraftDesktop

./: .gitignore  next.config.js.backup  package-lock.json  package.json  tsconfig.json
.github/workflows/: tauri-build.yml
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src/app/: globals.css
src/lib/: fonts.ts
